fix overlapping aspect ratio queries; optimize grid

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -116,7 +116,7 @@ canvas.board {
   }
 }
 
-@media (min-aspect-ratio: 2) and (min-height: 500px) {
+@media (aspect-ratio > 2) and (min-height: 500px) {
   #game.selected {
     grid-auto-columns: 1fr max-content 1fr;
     grid-template-areas: 
@@ -125,29 +125,44 @@ canvas.board {
   }
 }
 
-@media ((max-aspect-ratio: 2) or (max-height: 500px)) and (min-aspect-ratio: 5/4) {
+@media ((aspect-ratio <= 2) or (max-height: 500px)) and (aspect-ratio > 5/4) {
   #game.selected {
     grid-template-columns: max-content 1fr;
-    grid-auto-rows: calc(50% - var(--page-margin)/2);
+    grid-auto-rows: 1fr;
+    height: 100%;
     grid-template-areas: 
       'b l'
       'b r';
   }
 }
 
-@media (max-aspect-ratio: 5/4) and (min-aspect-ratio: 4/5) {
+@media (aspect-ratio <= 5/4) and (aspect-ratio > 1) {
   #game.selected {
-    grid-auto-columns: 1fr 1fr max-content;
+    grid-auto-columns: 1fr fit-content;
     grid-template-areas: 
-      'l r b';
-    grid-auto-rows: 100%;
+      'l b'
+      'l r';
+    grid-auto-rows: 1fr;
+    height: 100%;
   }
 }
 
-@media (max-aspect-ratio: 4/5) and (min-aspect-ratio: 1/2) {
+@media (aspect-ratio <= 1) and (aspect-ratio > 4/5) {
+  #game.selected {
+    grid-auto-columns: 1fr fit-content;
+    grid-template-areas: 
+      'l b'
+      'r r';
+    grid-auto-rows: 1fr;
+    height: 100%;
+  }
+}
+
+@media (aspect-ratio <= 4/5) and (aspect-ratio > 1/2) {
   #game.selected {
     grid-template-rows: max-content 1fr;
-    grid-auto-columns: calc(50% - var(--page-margin)/2);
+    grid-auto-columns: 1fr;
+    width: 100%;
     grid-template-areas: 
       'b b'
       'l r';
@@ -159,7 +174,7 @@ canvas.board {
   }
 }
 
-@media (max-aspect-ratio: 1/2) {
+@media (aspect-ratio <= 1/2) {
   #game.selected {
     grid-template-rows: max-content 1fr 1fr;
     grid-template-areas: 
